--- a/kubernetes/nginx-service.yaml
+++ b/kubernetes/nginx-service.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 80 # Where the services will serve on
-      targetPort: 80 # The port on the container
-      nodePort: 30007 # The static port on the nodes where the service will be available
+    - port: 80
+      targetPort: 80
+      nodePort: 30007
   selector:
     app: nginx
+
