--- a/kubernetes/nginx-ingress.yaml
+++ b/kubernetes/nginx-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "alb"
     alb.ingress.kubernetes.io/scheme: "internet-facing"
-    alb.ingress.kubernetes.io/target-type: "instance" 
+    alb.ingress.kubernetes.io/target-type: "ip"
 spec:
   rules:
   - host: www.devopsmoveoassignment.space
